2010-02-15  Daniel Mierswa  <impulze@impulze.org>

	Build system cleanup.
	Convenience "fixes":
	  use HALEVT_PIDDIR instead of lowercase
	  use HALEVT_DEFAULT_GROUP/USER

	Also do not pass piddir as preprocessor macros but rather define them in
	the config.h file (just as the USER_NAME/GROUP_NAME was).

	Use LN_S and RM instead of ln -s and rm -f.
2010-02-14 Patrice Dumas <pertusus@free.fr>

	* configure.ac, doc/*: use HALEVT_USER and HALEVT_GROUP instead
	of USER and GROUP.
	change to halevt-mount man page from Dominik Schemmel report.
	Document that no uid= mount option is used when user is halevt.

2010-02-14  Daniel Mierswa  <impulze@impulze.org>

	use calloc instead explicit instantiation
	halevt_get_iterator_value:
	  use calloc instead of explicitly initializing members to NULL after
	  successful allocation

	fix illegal free
	halevt_get_iterator_value:
	halevt_get_property_value:
	  if we don't set the first array member (see default case and/or if
	  libhal returns a NULL pointer), then it will be left unitialized
	  leaving the caller to do an illegal free when recursively removing the
	  contents of the array, hence we always initialize it to NULL

	release glib mainloop reference
	main:
	  we release our reference so we reach a cleaner exit state (this makes
	  memory checkers happer)

	fix memory leak
	halevt_free_boolean_expression:
	  halevt_new_boolean_expression duplicates the original string and
	  allocates an array of parents, both were never deallocated

	split public/private interface
	- due to the change, reorder function definitions so we don't need to
	  prototype them which also makes clear what needs what
	- make private implementation functions static
	- halevt_property_value no longer needs the preeceding declaration
	  of halevt_duplicate_str_list because of reordering

	do not exit application when cleaning resources

	provide cleanup function (HAL)
	halevt_cleanup_HAL: