@@ -1,3 +1,7 @@
+2010-02-18  Patrice Dumas  <pertusus@free.fr>
+
+	Use git-revert to add ChangeLog change
+
 2010-02-15  Daniel Mierswa  <impulze@impulze.org>
 
 	Build system cleanup.
